--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "multer": "^1.4.5-lts.1",
     "nanoid": "^3.2.0",
     "needle": "^3.2.0",
+    "node-fetch": "^3.3.2",
     "nodemailer": "^6.7.2",
     "nodemon": "^3.0.1",
     "oauth-1.0a": "^2.2.6",
