--- a/package.json
+++ b/package.json
@@ -9,8 +9,8 @@
     "build": "react-scripts build",
     "start": "node server.js",
     "test": "react-scripts test --env=jsdom",
-    "eject": "react-scripts eject",
-    "heroku-postbuild": "NPM_CONFIG_PRODUCTION=false npm install --prefix client && npm run build --prefix client"
+    "eject": "react-scripts eject"
+   
   },
   "author": "DeFiBeast",
   "license": "ISC",
