--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
-  "name": "wazodealsapi",
+  "name": "solmeme",
   "proxy": "http:localhost:5000",
   "version": "1.0.0",
-  "description": "API for Wazodeals",
+  "description": "API for solmeme",
   "main": "server.js",
   "scripts": {
     "dev": "react-scripts start",
@@ -12,7 +12,7 @@
     "eject": "react-scripts eject"
    
   },
-  "author": "DeFiBeast",
+  "author": "solmememaxi",
   "license": "ISC",
   "dependencies": {
     "api": "^4.5.2",
